src/objects/T_S_Contact_Junction__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Training &amp; Services Attended</relationshipLabel>
        <relationshipName>T_S_Contact_Junctions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Engaged__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Was this attendee engaged during the training session? If yes, please check the box. If not, please leave the box unchecked.</inlineHelpText>
        <label>Engaged?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_Services__c</fullName>
        <label>Training &amp; Services</label>
        <referenceTo>Training_Services__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>T_S_Contact_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Record</label>
    <nameField>
        <displayFormat>TSC-{0000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>